# PassFlow

./: .gitignore  API_DOCUMENTATION.md  BYTE_COMMANDS_REFERENCE.md  CHANGES_MYSQLCOMM.md  CHANGES_SUMMARY.md  CLAUDE-2.md  CMakeLists.txt  Makefile  PROJECT_SUMMARY.md  Prompt.txt  QUICK_START.md  README.md  build.sh  config.ini  config.ini.example  database_schema.sql  install.sh  passflow.service  test_serial.py
include/: Common.h  Logger.h  MainControl.h  MessageQueue.h  MySqlComm.h  VideoControl.h
src/: MainControl.cpp  MySqlComm.cpp  VideoControl.cpp  main.cpp
